[project]
name = "rag-webpage-chatbot"
version = "1.0.0"
description = "A RAG-powered chatbot for conversing with webpage content"
authors = [
    {name = "Jean Charles", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.32.0",
    "streamlit-chat>=0.1.1",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "openai>=1.0.0,<2.0.0",
    "sentence-transformers>=2.3.1",
    "pinecone-client>=3.0.0",
    "langchain-huggingface>=0.0.1",
    "watchdog>=3.0.0",
    "unstructured>=0.12.0",
    "python-dotenv>=1.0.0",
    "altair>=4.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
